fix cascading margin layout bug

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -503,9 +503,6 @@ body {
         max-width: 100%;
         margin-left: auto;
         margin-right: auto;
-        :nth-child(even) {
-          margin: 10px 0;
-        }
       }
     }
     .products {
